Login/registration features and fixes
- add a login landing page that determines how to present user with login/registration links depending on settings provided
- add a link to AdVISE dashboard on provider welcome page if env var is set.
- Don't let users set password locally if USE_PROVIDER is set, but send them back to provider if they want to change password/mfa

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -12,6 +12,16 @@
     max-width: 400px;
 }
 
+.loginapp {
+    max-width:750px;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+
 
 .api_token {
     cursor: pointer;
