--- a/oauth2provider/provider/templates/registration/logged_out.html
+++ b/oauth2provider/provider/templates/registration/logged_out.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block branding %}
 
-<h3>AdVise OAuth2 Provider</h3>
+<h3 class="text-center">Thanks for using AdVISE!</h3>
 
 {% endblock %}
 {% block content_title %}<div class="row column"><h2>Logged out</h2></div>{% endblock %}
