--- a/oauth2provider/provider/templates/provider/welcome.html
+++ b/oauth2provider/provider/templates/provider/welcome.html
@@ -1,14 +1,11 @@
 {% extends "cvdp/bt_base_site.html" %}
 {% load user_tags %}
-{% block branding %}
-<h3>AdVISE OAUTH2</h3>
-{% endblock %}
 
 
 {% block content %}
 
 
-<h4>Welcome to the AdVISE OAUTH2 Provider</h4>
+<h4 class="text-center mb-5">Welcome to AdVISE!</h4>
 
 {% if user.is_authenticated %}
 <div class="alert alert-warning">You are logged in as {{ user.username }}</div>
@@ -33,15 +30,20 @@
 {% endif %}
 
 {% if user.is_authenticated %}
+{% if dashboard %}
 <div class="mb-3">
-  <a href="{% url 'password_change' %}" class="btn btn-primary d-grid w-100">Change Password</a>
+  <a href="{{ dashboard }}" class="btn btn-primary d-grid w-100">My Dashboard</a>
+</div>
+    {% endif %}
+<div class="mb-3">
+  <a href="{% url 'password_change' %}" class="btn btn-outline-primary d-grid w-100">Change Password</a>
 </div>
 
 
 
 {% if user|has_mfa_enabled %}
 <div class="mb-3">
-  <a href="{% url 'provider:remove_mfa' %}" class="btn btn-primary d-grid w-100">Remove MFA Device</a>
+  <a href="{% url 'provider:remove_mfa' %}" class="btn btn-outline-primary d-grid w-100">Remove MFA Device</a>
 </div>
 {% else %}
 <div class="mb-3">
