Reporting form fixes and features
- allow anonymous reporting
- add google recaptcha on sign up forms for both provider and local accounts and vul reporting form.

--- a/authapp/templates/account/login.html
+++ b/authapp/templates/account/login.html
@@ -29,7 +29,7 @@
     
     <div class="mb-1">
       <input type="hidden" name="next" value="{{ next }}">
-      <button class="btn btn-primary btn-lg d-grid w-100" type="submit">Sign in</button>
+      <button class="btn btn-primary btn-lg d-grid w-100 g-recaptcha" data-sitekey="6LdyVXUlAAAAAPUd9y6CSYP8KUJQ2zSo_H-rwqkf" data-callback='onSubmit' data-action='submit' type="submit">Sign in</button>
     </div>
   </form>
     
