--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -36,7 +36,7 @@
 	  </strong>
 	</div>
 	<a href="{% url 'cvdp:dashboard' %}" class="btn btn-primary btn-lg">My Dashboard</a>
-	<a href="{% url 'authapp:logout' %}" class="btn btn-primary btn-lg">Login as a different user.</a>
+	<a href="{% url 'authapp:logout' %}" class="btn btn-outline-primary btn-lg">Login as a different user.</a>
 
 	{% else %}
 	
@@ -74,6 +74,12 @@
       <p class="text-center mt-4 lead">
         The Advanced Vulnerability Information Sharing Environment -- A Platform for CVD and PSIRT Management
       </p>
+      <div class="d-grid w-100 align-items-center">
+      {% if report_link %}
+      <a href="{{ report_link }}" class="btn btn-lg btn-outline-primary">Submit a Vul Report</a>
+      {% endif %}
+      </div>
+
     </div>
   </div>
   
