--- a/oauth2provider/provider/templates/registration/login.html
+++ b/oauth2provider/provider/templates/registration/login.html
@@ -1,5 +1,10 @@
 {% extends "cvdp/bt_base_site.html" %}
-{% load i18n crispy_forms_tags %}
+{% load static i18n crispy_forms_tags %}
+
+{% block extrahead %}
+<script type="text/javascript" src="{% static 'cvdp/js/login.js' %}"></script>
+{% endblock %}
+
 {% block branding %}
 
 <h3 class="text-center">Welcome to AdVISE!</h3>
@@ -60,9 +65,16 @@
       <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
     </div>
   </div>
+  <div class="form-group">
+    {% if form.catcha.errors %}
+    <div class="alert alert-danger">{{ form.captcha.errors }}</div>
+    {% endif %}
+    {{ form.captcha }}
+  </div>
   <input type="hidden" name="next" value="{{ next }}" />
   <div class="mb-3">
-    <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+    <div class="g-recaptcha" data-sitekey="{{ public_key }}" data-callback="recaptchaCallback" data-expired-callback="recaptchaExpiredCallback"></div>
+    <button class="btn btn-primary d-grid w-100" id="recaptca-submit" type="submit">Sign in</button>
   </div>
 </form>
 {% endblock %}
