CSAF!!! Initial add, plus bugfixes
- link message user/group buttons work. fix removing case artifacts
- change case artifact removal so that staff and superusers can remove completely, coordinators and file owners can jsut 'unshare'
- add button to cancel remove files
- fix redirect after password change
- add SERVER_NAME env variable (currently just taking ALLOWED_HOST[0]), for proper link creation for email button
- add links to CSAF API
- Fix adding multiple participants to a case. Fix tabs issue on case page
- Add server name environment variable
- fix post style. Don't let user register with same email

--- a/cvdp/templates/cvdp/contact.html
+++ b/cvdp/templates/cvdp/contact.html
@@ -51,7 +51,7 @@
 		    id="uploadedAvatar"
 		    />-->
 		<div class="button-wrapper">
-		  <a class="btn btn-primary me-2 mb-4" href=""><i class="fas fa-comment" alt="message user" title="message user"></i> Message User</a>
+		  <a class="btn btn-primary me-2 mb-4" href="{% url 'cvdp:msg_contact' object.user.contact.uuid %}"><i class="fas fa-comment" alt="message user" title="message user"></i> Message User</a>
 		</div>
               </div>
             </div>
