--- a/cvdp/templates/cvdp/new_inbox.html
+++ b/cvdp/templates/cvdp/new_inbox.html
@@ -11,7 +11,9 @@
   {% include 'cvdp/include/top_panel.html' with button_text="Send Message" title=user.screen_name breadcrumbs="Inbox" %}
 
   <div id="app" {% if user.is_coordinator %}val="coord"{% else %}val="user"{% endif %}></div>
-  
+  {% if contact and user.is_coordinator %}
+  <div id="contact" val="{{ contact }}"></div>
+  {% endif %}
 </div>
 {% render_bundle 'inbox' %}
 {% endblock %}
