--- a/cvdp/templates/cvdp/new_inbox.html
+++ b/cvdp/templates/cvdp/new_inbox.html
@@ -10,7 +10,11 @@
 
   {% include 'cvdp/include/top_panel.html' with button_text="Send Message" title=user.screen_name breadcrumbs="Inbox" %}
 
-  <div id="app" {% if user.is_coordinator %}val="coord"{% else %}val="user"{% endif %}></div>
+  {% if team %}{% else %}
+  <div class="alert alert-danger">AdVISE is improperly configured. Please select coordination team owner in admin settings.</div>
+  {% endif %}
+  
+  <div id="app" {% if user.is_coordinator %}val="coord"{% else %}val="user"{% endif %}groups="{{user.groups.all|length}}"></div>
   {% if contact and user.is_coordinator %}
   <div id="contact" val="{{ contact }}"></div>
   {% endif %}
