--- a/cvdp/templates/cvdp-email/en/email_html_bootstrap.html
+++ b/cvdp/templates/cvdp-email/en/email_html_bootstrap.html
@@ -44,7 +44,7 @@
                               <tbody>
                                 <tr>
                                   <td style="line-height: 24px; font-size: 16px; margin: 0;" align="left">
-                                    <img class="w-100" src="" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; border-style: none; border-width: 0;">
+                                    <img class="w-100" src="{{ logo }}" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; border-style: none; border-width: 0;">
                                   </td>
                                 </tr>
                               </tbody>
