--- a/cvdp/templates/cvdp/base.html
+++ b/cvdp/templates/cvdp/base.html
@@ -233,22 +233,14 @@
 		  <a href="javascript:void(0);" class="nav-link nav-icon iconClass dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
 		    <i class="menu-icon fas fa-bell">
 		    </i>
-		    <span class="badge rounded-pill bg-danger">2</span>
+		    <span id="notify_count"></span>
 		  </a>
-		  <ul class="dropdown-menu dropdown-menu-end">
+		  <ul class="dropdown-menu dropdown-menu-end" id="notify_list">
 		    <li>
 		      <a class="dropdown-item" href="#">
-			You have new things to look at!
+			You are all caught up!
 		      </a>
 		    </li>
-		    <li>
-                      <div class="dropdown-divider"></div>
-                    </li>
-		    <li>
-                      <a class="dropdown-item" href="#">
-			They will be listed here, I swear!
-                      </a>
-                    </li>
 		  </ul>
 		</li>
 		
