RECAPTCHA updates and bugfixes

--- a/cvdp/templates/cvdp/base.html
+++ b/cvdp/templates/cvdp/base.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="{% static 'cvdp/vendor/fonts/boxicons.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'cvdp/css/fontawesome/all.css' %}" />
     <!-- Core CSS -->
-    <link rel="stylesheet" href="{% static 'cvdp/vendor/css/core.css' %}" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="{% static 'cvdp/css/core.css' %}" class="template-customizer-core-css" />
     <link rel="stylesheet" href="{% static 'cvdp/vendor/css/theme-default.css' %}" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="{% static 'cvdp/css/demo.css' %}" />
     <link rel="stylesheet" href="{% static 'cvdp/css/bt_style.css' %}" />
