PDF rendering and bugfixes/cleanup
- better pdf rendering
- add contact activity/audit.
- rewrite group view to reuse group admin component
- remove tabulator and other old js.

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -16,6 +16,8 @@
 .dashboard-card-1 {
     width: 70%;
     padding: 15px;
+    max-height: 1000px;
+    overflow-y: scroll;
 }
 
 .dashboard-card-2 {
