--- a/cvdp/static/cvdp/css/bt_style.css
+++ b/cvdp/static/cvdp/css/bt_style.css
@@ -8,7 +8,28 @@
   right: 0px;
   display: block;
 }
+/*
+.advisorypdf {
+    font-family: "Helvetica";
+    color: #FFF;
+}
+.advisorypdf h1 {
+    font-size: 1.6rem;
+}
 
+.advisorypdf h2 {
+    font-size: 1.4rem;
+}
+
+.advisorypdf h3 {
+    font-size: 1.2rem;
+}
+
+.advisorypdf p {
+    font-size: 1rem;
+}
+
+*/
 /*
 .authentication-wrapper-wide {
     max-width: 1000px;
