Bugfixes and Python update
- fix so superuser can login without email confirmation
- remove react-pdf, remove unused javascript files/views. Fix swagger errors
- fix link on pending/new users on triage account. Fix rogue backslash in color chooser
- fix issue where case was wrongly being shown as unassigned to non-coordinator users
- add case artifact to global search
- only show admin functions if user is group admin
- group admins can only change contact info
- build and test against python 3.11

--- a/cvdp/templates/cvdp/base.html
+++ b/cvdp/templates/cvdp/base.html
@@ -261,7 +261,7 @@
                           </div>
                           <div class="flex-grow-1">
                             <span class="fw-semibold d-block">{{ user.screen_name }}</span>
-                            <small class="text-muted">{{ user.groups.all|join:", "}} {% if user.is_superuser %}<br/>Admin{% endif %}</small>
+                            <small class="text-muted">{{ user.groups.all|join:", "}} {% if user.is_superuser %}<br/>Admin{% elif user.is_staff %}Staff {% elif user.is_coordinator %}Coordinator{% endif %}</small>
                           </div>
                         </div>
                       </a>
