Feature adds and fixes
- Table improvements.  Better error reporting, be able to resize columns in table.
- make componets table full-width, rename button when adding dependencies
- Remove group type.  Fix post ownership
- allow setup mfa through admin login
- Add popover to case participant list
- once contact is verified, immediately add them to the group
- Add share status button.  Still need to make a view for suppliers to view other suppliers status
- add status changes into case activity. Make sure vendors are being prompted for status when needed

--- a/cvdp/static/cvdp/css/bt_style.css
+++ b/cvdp/static/cvdp/css/bt_style.css
@@ -822,5 +822,45 @@ tr.removerow {
     margin-top: 10px;
 }
 
+/* Checkbox style */
+
+.cb{
+  margin: 4px;
+  overflow: hidden;
+  float: left;
+  margin-bottom: 20px;
+}
+
+.cb label {
+  float: left; 
+ 
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.cb label span {
+  text-align: center;
+  background-color: #a2a3a5;
+  display: block;
+  padding: 5px 15px;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
+.cb label input {
+  display: none;
+  color: #fff
+}
+/* selects all of the text within the input element and changes the color of the text */
+.cb label input + span{color: #fff;}
 
 
+/* This will declare how a selected input will look giving generic properties */
+.cb input:checked + span {
+    color: #ffffff;
+    text-shadow: 0 0  6px rgba(0, 0, 0, 0.8);
+}
+.action input:checked + span{
+    background-color: #696cff;
+ 
+}
