--- a/cvdp/templates/cvdp/components.html
+++ b/cvdp/templates/cvdp/components.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 
-<div class="container-xxl flex-grow-1 container-p-y">
+<div class="container-fluid flex-grow-1 container-p-y">
   {% url 'cvdp:case' case.id as bread_url %}
   {% include 'cvdp/include/top_panel.html' with title="Component List" breadcrumbs="Components" %}
 
