Case activity, search, and messaging features and fixes
- Add case activity view all/search functionality
- prevent activity modal from reloading on case updates. Only fetch data if modal is opened
- fix infinte scroll on activity app.  Allow enter to submit
- Link directly to a message in email notification
- fix loading threads when sending message to group. fix pagination on search all page
- only allow someone to tag a participant if that participant has access to the current thread
- add case list for each component in component detail modal. Return empty list of affect products if user is not provided to vulserializer to prevent info leak.
- make archived threads read-only. add tests to confirm. Allow owner to unarchive a thread.
- Add images to posts/messages
- Add banner to dev instance
- pipe through ENVIRONMENT_NAME var for banner
- Add scroll for case artifacts, fix participant list scroll
- fix issue uploading multiple files

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -1,3 +1,4 @@
+
 .card-wrapper {
     display: flex;
     justify-content: space-between;
@@ -6,6 +7,10 @@
 
 .dashboard-activity-scroll {
     /*max-height: 900px;*/
+}
+
+.thread-preview-list img {
+    max-width: 30px;
 }
 
 #scrollableDiv {
@@ -223,4 +228,10 @@ pre.cvejson {
     height: 500px;
 }
 
+#component-modal {
+    background-color: #f5f5f9;
+}
 
+#component-modal .tab-content {
+    background-color: #FFF;
+}
