--- a/cvdp/templates/cvdp/base.html
+++ b/cvdp/templates/cvdp/base.html
@@ -61,10 +61,11 @@
     </head>
 
   <body>
+
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
-        <!-- Menu -->
+	<!-- Menu -->
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
 	  <div class="app-brand demo">
 	    <a href="{% url 'cvdp:dashboard' %}" class="app-brand-link">
@@ -199,7 +200,13 @@
       <!-- Layout container -->
       <div class="layout-page">
         <!-- Navbar -->
-	
+	{% if DEV_BANNER %}
+	  <div class="container-fluid text-center bg-primary text-white p-3">
+	    <div class="lead">{% if ENVIRONMENT_NAME %}You are connected to the {{ENVIRONMENT_NAME}} instance of AdVISE{% else %}This is a non-production instance of AdVISE {% endif %}</div>
+	  </div>
+	  {% endif %}
+
+
         <nav class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme" id="layout-navbar">
             <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
               <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
