--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -1,4 +1,5 @@
 
+
 .card-wrapper {
     display: flex;
     justify-content: space-between;
@@ -113,6 +114,10 @@ pre.cvejson {
     border-bottom: 1px solid rgba(26,54,126,0.125)
 
 
+}
+
+#component-detail-tabs-tabpane-sbom .dropdown-toggle::after {
+    display: inline-block !important;
 }
 
 .dropdown-toggle::after{
