--- a/cvdp/templates/cvdp/contact.html
+++ b/cvdp/templates/cvdp/contact.html
@@ -1,5 +1,6 @@
 {% extends CVDP_BASE_TEMPLATE %}
 {% load post_tags crispy_forms_tags user_tags%}
+{% load render_bundle from webpack_loader %}
 {% load static %}
 {% block js %}
 {{ block.super }}
@@ -26,7 +27,7 @@
           <button type="button" class="nav-link active" role="tab" data-bs-toggle="tab" data-bs-target="#navs-pills-justified-all" aria-controls="navs-pills-justified-all" aria-selected="true"><i class="bx bx-user me-1"></i> Account</button>
         </li>
         <li class="nav-item">
-          <button type="button" class="nav-link" role="tab" data-bs-toggle="tab" data-bs-target="#navs-pills-justified-tkts" aria-controls="navs-pills-justified-tkts" aria-selected="true"><i class="bx bx-bell me-1"></i> Tickets</button>
+          <button type="button" class="nav-link" role="tab" data-bs-toggle="tab" data-bs-target="#navs-pills-justified-tkts" aria-controls="navs-pills-justified-tkts" aria-selected="true"><i class="fas fa-briefcase me-1"></i> Cases</button>
         </li>
         <li class="nav-item">
           <button class="nav-link" type="button"  role="tab" data-bs-toggle="tab" data-bs-target="#navs-pills-justified-bounces" aria-controls="navs-pills-justified-bounces" aria-selected="true">
@@ -79,26 +80,32 @@
 	      <div class="row">
 		<div class="col-lg-12">
 		  <b>Full Name:</b>  {{ object.user.get_full_name }}<br/>
+		  <b>Email:</b>   {{ object.user.email }}<br/>
 		  <b>Organization:</b>  {{ object.user.org }}<br/>
 		  <b>Title:</b>   {{ object.user.title }}<br/>
-		  <b>Email:</b>   {{ object.user.email }}<br/>
 		  <b>Groups:</b>   {{ object.user.groups.all|join:", " }}<br/>
-		  <b>Associations:</b>   <br/>
+		  <b>Associations:</b>
+		  {% if associations %}
+		  <br/>
 		  <ul>
 		    {% for a in associations %}
-		    <li>Added to <a href="{% url 'cvdp:group' a.group.id %}">{{ a.group.name }}</a> on {{ a.created|date:"Y-m-d" }} {% if a.verified %}VERIFIED{% else %}NOT VERIFIED{% endif %}</li>
+		    <li>Added to <a href="{% url 'cvdp:group' a.group.id %}">{{ a.group.name }}</a> on {{ a.created|date:"Y-m-d" }} {% if a.verified %}<span class="badge rounded-pill bg-success">VERIFIED</span>{% else %}<span class="badge rounded-pill bg-warning">NOT VERIFIED</span>{% endif %}</li>
 		    {% endfor %}
 		  </ul>
+		  {% else %}
+		  <br/>
+		  {% endif %}
+		  
 		  <b>Last Login:</b>   {{ object.user.last_login }}<br/>
 		  {% if object.user.userprofile.service %}
 		  <b>MFA Enabled:</b> Not required <br/>
-		  {% else %}
-		  <b>MFA Enabled:</b> {% if object.user|mfa_set %}Set{% else %}Not Set{% endif %} <br/>
+		  {% elif object.user.has_usable_password %}
+		  <b>MFA Enabled:</b> {% if object.user|mfa_set %}Yes{% else %}No{% endif %} <br/>
 		  {% endif %}
 		  <b>Account Provider:</b> {% for x in object.user.socialaccount_set.all %}
 		  <span class="badge rounded-pill bg-primary p-2">{{ x.provider }}</span>
 		  {% endfor %}
-		  {% if user.has_usable_password %}
+		  {% if object.user.has_usable_password %}
 		  <span class="badge rounded-pill bg-primary p-2">LOCAL</span>
 		  {% endif %}
 
@@ -106,7 +113,7 @@
 		    {% if object.user|mfa_set %}
 		    <a id="resetmfa" href="{% url 'authapp:reset_mfa' object.user.id %}"><button class="btn btn-sm btn-warning">MFA Reset</button></a>
 		    {% endif %}
-		    <a href=""><button class="btn btn-sm btn-primary">Email User</button></a>
+		    <!--<a href=""><button class="btn btn-sm btn-primary">Email User</button></a>-->
 		  </div>
 		</div>
 	      </div>
@@ -114,39 +121,8 @@
 	  </div>
 	</div>
 	<div class="tab-pane fade" id="navs-pills-justified-tkts" role="tabpanel">
-          <div class="card mb-4">
-            <h5 class="card-header">Tickets</h5>
-            <!-- Account -->
-            <div class="card-body">
-	      <div class="row">
-		<div class="col-lg-1">
-		  <label class="form-label" for="filterstatus">Status</label>
-		</div>
-		<div class="col-lg-3">
-                  <select class="input-group-field form-control" id="filterstatus">
-                    <option value="0">All</option>
-                    <option value="1">Open</option>
-                    <option value="4">Closed</option>
-                  </select>
-		</div>
-		<div class="col-lg-6">
-		  <div class="input-group input-group-merge">
-		    <span class="input-group-text" id="basic-addon-search31"><i class="bx bx-search"></i></span>
-                    <input class="form-control" type="text" placeholder="Filter tasks" id="filter_tasks" href="" name="{{ object.user.username }}">
-                    </div>
-		  </div>
-		</div>
-		<div class="col-lg-2"></div>
-	      </div>
-	      <div class="row">
-		<div class="col-lg-12">
-		  <div id="case_tasks">
-		    
-		  </div>
-		</div>
-	      </div>
-	    </div>
-	  </div>
+	  <div id="app" contact="{{object.uuid}}"></div>
+	</div>
         <div class="tab-pane fade" id="navs-pills-justified-bounces" role="tabpanel">
           <div class="card mb-4">
             <h5 class="card-header">Email Bounces</h5>
@@ -159,27 +135,8 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="card mt-4">
-	<div class="card-header">
-	  <h5 class="card-title">User Activity</h5>
-	</div>
-	<div class="card-body">
-	  {% for act in activity %}
-	  <div class="d-flex align-items-center gap-2 m-2 border-bottom pb-2">
-	    {% autoescape off %}{{ act.user|userlogo:"profile-pic" }}{% endautoescape %}
-	    {{ act.title }} <small class="text-muted">(<time class="article-row-content-time"><i class="far fa-clock"></i> {{ act.created|timesince }} ago)
-	  </time></small>
-
-	  </div>
-	  {% endfor %}
-	</div>
-      </div>
-    </div>
-  </div>
   {% else %}
-
+  
   <div class="row">
     <div class="col-lg-12">
       <div class="card mt-1">
@@ -210,4 +167,5 @@
   
   
 </div>
+{% render_bundle 'contactapp' %}
 {% endblock %}
