add federation features
- start federating this thing! This commit adds a settings page for accepting API keys and urls. Also fix error responses on API.
- add transfer modal to select connection to share with and share options.
- report transfer changes
- enable/disable connections to preserve info about transferred cases. Fix permissions on transfer
- add signal to check cors origin against connection settings to allow transfers
- do some validation on incoming transfers, update case status and resolution.  Add case transfer reason.
- Add a bunch of transfer validation and UI stuff
- transfer vuls and artifacts. Show transfer status
- keep track of what we're transferring and prevent duplicate transfers (specifically of report so multiple cases are not created on receiving instance.
- add unit tests for incoming transfers
- allow case advisory transfers
- change default on post created field in order to transfer post times and maintain timeline. Prevent case transfers when report does not exist. Fix bug when editing a transferred report.

--- a/assets/css/casethread.css
+++ b/assets/css/casethread.css
@@ -6,6 +6,13 @@
     height: 1000px;
 }
 
+.assignment_dropdown > button > div > span {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow:hidden;
+
+}
+
 .dashboard-activity-scroll {
     /*max-height: 900px;*/
 }
